--- a/README
+++ b/README
@@ -1,7 +1,4 @@
-University of Waterloo CS486 Winter 2012
-Assignment 2
-Credit Card Fraud Detection System
-
-By giving specific scenario, the system calculate the percentage of such transcation is fraud
-
-Detail description of the problem set can be found in asst2.pdf
+• Determined the likelihood of fraud transaction with scenario such as purchasing a computer related
+product while traveling in a foreign country
+• Implemented Bayesian network with variable elimination algorithm and decision network using C++
+• Applied different random variables to evaluate the choice of probability and variables
