--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Credit Card Fraud Detection - Bayesian/Decision Network
+=======================================================
 • Determined the likelihood of fraud transaction with scenario such as purchasing a computer related
 product while traveling in a foreign country
 • Implemented Bayesian network with variable elimination algorithm and decision network using C++
