--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Credit Card Fraud Detection - Bayesian/Decision Network
-=======================================================
-• Determined the likelihood of fraud transaction with scenario such as purchasing a computer related
+# Credit Card Fraud Detection - Bayesian/Decision Network
+
+* Determined the likelihood of fraud transaction with scenario such as purchasing a computer related
 product while traveling in a foreign country
-• Implemented Bayesian network with variable elimination algorithm and decision network using C++
-• Applied different random variables to evaluate the choice of probability and variables
+* Implemented Bayesian network with variable elimination algorithm and decision network using C++
+* Applied different random variables to evaluate the choice of probability and variables
